--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-stencil",
-  "homepage": "Portfolio-Final",
+  "homepage": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,8 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-social-icons": "^5.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
